[FIX] web: fix button alignment  and color issue on image field

--- a/addons/web/static/src/scss/fields.scss
+++ b/addons/web/static/src/scss/fields.scss
@@ -346,8 +346,10 @@
             transition: opacity ease 400ms;
 
             > button.fa {
+                padding: 0px;
                 border: none;
                 background-color: transparent;
+                color: inherit;
             }
 
             > .fa {
